--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <title>Joe Kendall - Personal Website</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Garamond', serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #e6f7ff; /* Teal background color */
+            color: #333;
         }
 
         header {
-            background-color: #333;
+            background-color: #008080; /* Teal header background color */
             color: #fff;
             padding: 1em;
             text-align: center;
         }
 
         nav {
-            background-color: #555;
+            background-color: #005757; /* Darker teal navigation background color */
             overflow: hidden;
         }
 
@@ -38,13 +39,18 @@
             padding: 20px;
             margin: 20px;
             background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         footer {
-            background-color: #333;
+            background-color: #008080; /* Teal footer background color */
             color: #fff;
             padding: 1em;
             text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
@@ -53,7 +59,7 @@
 
     <header>
         <h1>Joe Kendall</h1>
-        <p>Welcome to My Personal Website</p>
+        <p>Postdoctoral Fellow, ETH Zurich</p>
     </header>
 
     <nav>
