--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joe Kendall - Personal Website</title>
+    <title>Joe Kendall</title>
     <style>
         body {
             font-family: 'Yu Mincho', serif; /* Yu Mincho font */
@@ -86,12 +86,12 @@
 
     <header>
         <h1>Joe Kendall</h1>
-        <p>Postdoctoral Fellow, ETH Zurich</p>
+        <p>Postdoctoral Fellow - ETH Zurich</p>
     </header>
 
     <nav>
         <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
+        <a href="projects.html">Projects</a> <!-- Link to the new projects.html file -->
         <a href="#contact">Contact</a>
     </nav>
 
@@ -126,7 +126,7 @@
     </section>
 
     <footer>
-        <p>&copy;</p>
+        <p>&copy; 2024 Joe Kendall.</p>
     </footer>
 
 </body>
