--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="project">
             <h3>Project 2: Project Name</h3>
-            <p>Description of Project 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Description of Project 2.<a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water</a></p>
             <a href="#project2">Learn More</a>
         </div>
 
@@ -122,7 +122,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Provide contact information or a contact form.</p>
+        <p>Email: joe.kendall@gess.ethz.ch.</p>
+        <p>Twitter: joeakendall.</p>
     </section>
 
     <footer>
