--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="project">
             <h3>Project 2: Project Name</h3>
-            <p>Description of Project 2.<a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water</a></p>
+            <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
             <a href="#project2">Learn More</a>
         </div>
 
@@ -127,7 +127,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Joe Kendall.</p>
+        <p>&copy; 2024 Joe Kendall</p>
     </footer>
 
 </body>
