--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: joe.kendall@gess.ethz.ch.</p>
-        <p>Twitter: joeakendall.</p>
+        <p>Email: joe.kendall@gess.ethz.ch</p>
+        <p><a href="https://twitter.com/joeakendall">@joeakendall</a></p>
     </section>
 
     <footer>
