--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Write a brief introduction about yourself here.</p>
+        <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specialising in historical legacies, inter-​group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. He has also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-​group prejudice in post-​imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
     </section>
 
     <section id="projects">
@@ -123,7 +123,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: joe.kendall@gess.ethz.ch</p>
-        <p><a href="https://twitter.com/joeakendall">@joeakendall</a></p>
+        <p>Twitter: <a href="https://twitter.com/joeakendall">@joeakendall</a></p>
     </section>
 
     <footer>
