--- a/index.html
+++ b/index.html
@@ -1,104 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- ... (existing code remains the same) ... -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joe Kendall</title>
-    <style>
-        body {
-            font-family: 'Yu Mincho', serif; /* Yu Mincho font */
-            margin: 0;
-            padding: 0;
-            background-color: #cfe3e7; /* Slightly darker teal background color */
-            color: #333;
-        }
+<section id="about" style="background-color: #b8d8e0;"> <!-- Adjusted background color -->
+    <h2>About Me</h2>
+    <img id="profile-image" src="image.jpg" alt="Profile Image" style="max-width: 100%; border-radius: 8px;">
+    <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specializing in historical legacies, inter-group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-group prejudice in post-imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
+</section>
 
-        header {
-            background-color: #006666; /* Slightly darker teal header background color */
-            color: #fff;
-            padding: 1em;
-            text-align: center;
-        }
+<!-- ... (remaining code remains the same) ... -->
 
-        header h1 {
-            font-weight: bold; /* Make the title bold */
-        }
-
-        nav {
-            background-color: #005757; /* Darker teal navigation background color */
-            overflow: hidden;
-        }
-
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        section {
-            padding: 20px;
-            margin: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        footer {
-            background-color: #006666; /* Slightly darker teal footer background color */
-            color: #fff;
-            padding: 1em;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        /* Style for projects */
-        .project {
-            margin-bottom: 20px;
-        }
-
-        .project h3 {
-            color: #006666; /* Slightly darker teal project title color */
-        }
-
-        .project p {
-            color: #555;
-        }
-
-        .project a {
-            color: #006666; /* Slightly darker teal project link color */
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .project a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-
-<body>
-
-    <header>
-        <h1>Joe Kendall</h1>
-        <p>Postdoctoral Fellow - ETH Zurich</p>
-    </header>
-
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="projects.html">Projects</a> <!-- Link to the new projects.html file -->
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a Postdoctoral Fellow at the Immigration Policy Lab (IPL) at ETH Zurich, specialising in historical legacies, inter-​group prejudice reduction, and experimental methods. I received my PhD in Social and Political Science from the European University Institute in 2023, having previously obtained an MPhil in Comparative Politics from the University of Oxford. I have also been a visiting graduate student at UC Berkeley and Universidad Carlos III de Madrid. My PhD research focused on the relationship between collective memory and inter-​group prejudice in post-​imperial Britain, and my work also covers the politics of guilt and shame, causal inference techniques, and nationalism. My work with the IPL focuses on the causal identification of the effects of citizenship and legal status changes for migrants and host communities.</p>
-    </section>
 
     <section id="projects">
         <h2>Projects</h2>
