--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         section {
             padding: 20px;
             margin: 20px;
-            background-color: #004a4a; /* Slightly darker teal section background color */
+            background-color: #005757; /* Lighter teal section background color */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
         }
@@ -90,7 +90,7 @@
 
         /* Style for the image */
         #profile-image {
-            max-width: 100px;
+            max-width: 115px; /* 15% bigger than the original */
             float: left;
             margin-right: 20px;
             border-radius: 50%; /* Circular border radius for the image */
@@ -142,17 +142,12 @@
     <section id="projects">
         <h2>Projects</h2>
 
-        <!-- Replace with your actual project information -->
         <div class="project">
-            <h3>Project 1: Project Name</h3>
-            <p>Description of Project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#project1">Learn More</a>
+            <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
         </div>
 
         <div class="project">
-            <h3>Project 2: Project Name</h3>
-            <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
-            <a href="#project2">Learn More</a>
+            <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
         </div>
 
         <!-- Add more projects as needed -->
