--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             font-family: 'Yu Mincho', serif;
             margin: 0;
             padding: 0;
-            background-color: #008080; /* Light teal background color */
-            color: #333; /* Dark gray text color */
+            background-color: #cce5e5; /* Pale teal background color */
+            color: #fff; /* White text color */
         }
 
         header {
-            background-color: #006666; /* Teal header background color */
+            background-color: #99b3b3; /* Slightly darker pale teal header background color */
             color: #fff;
             padding: 1em;
             text-align: center;
@@ -28,7 +28,7 @@
         }
 
         nav {
-            background-color: #005757; /* Darker teal navigation background color */
+            background-color: #80a0a0; /* Darker pale teal navigation background color */
             overflow: hidden;
         }
 
@@ -43,19 +43,19 @@
         }
 
         nav a:hover {
-            background-color: #007070; /* Hover color for navigation links */
+            background-color: #99b3b3; /* Hover color for navigation links */
         }
 
         section {
             padding: 20px;
             margin: 20px;
-            background-color: #006666; /* Teal section background color */
+            background-color: #99b3b3; /* Pale teal section background color */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
         }
 
         footer {
-            background-color: #005757; /* Darker teal footer background color */
+            background-color: #80a0a0; /* Darker pale teal footer background color */
             color: #fff;
             padding: 1em;
             text-align: center;
@@ -85,12 +85,12 @@
         }
 
         .project a:hover {
-            color: #00b3b3; /* Hover color for project links */
+            color: #cce5e5; /* Hover color for project links */
         }
 
         /* Style for the image */
         #profile-image {
-            max-width: 110px; /* 10% bigger than the original */
+            max-width: 132px; /* 20% bigger than the original */
             float: right; /* Move the image to the right of the text */
             margin-left: 20px;
             border-radius: 50%; /* Circular border radius for the image */
