--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             margin: 0;
             padding: 0;
             background-color: #cce5e5; /* Pale teal background color */
-            color: #fff; /* White text color */
+            color: #333; /* Dark gray text color */
         }
 
         header {
             background-color: #99b3b3; /* Slightly darker pale teal header background color */
-            color: #fff;
+            color: #333;
             padding: 1em;
             text-align: center;
         }
@@ -35,7 +35,7 @@
         nav a {
             float: left;
             display: block;
-            color: #fff;
+            color: #333;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -56,7 +56,7 @@
 
         footer {
             background-color: #80a0a0; /* Darker pale teal footer background color */
-            color: #fff;
+            color: #333;
             padding: 1em;
             text-align: center;
             position: fixed;
@@ -70,15 +70,15 @@
         }
 
         .project h3 {
-            color: #fff; /* White project title color */
+            color: #333; /* Dark gray project title color */
         }
 
         .project p {
-            color: #ddd; /* Light gray text color for projects */
+            color: #555; /* Dark gray text color for projects */
         }
 
         .project a {
-            color: #fff;
+            color: #333;
             text-decoration: none;
             font-weight: bold;
             transition: color 0.3s; /* Smooth color transition on hover */
@@ -109,11 +109,11 @@
         }
 
         #about h2 {
-            color: #fff;
+            color: #333; /* Dark gray about me title color */
         }
 
         #about p {
-            color: #ddd;
+            color: #555; /* Dark gray text color for about me section */
         }
     </style>
 </head>
