--- a/projects.html
+++ b/projects.html
@@ -17,15 +17,14 @@
         <!-- Add links to other projects or sections as needed -->
     </nav>
 
-    <section id="project1">
-        <h2>Project 1: Project Name</h2>
-        <p>Description of Project 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </section>
+            <div class="project">
+            <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
+        </div>
 
-    <section id="project2">
-        <h2>Project 2: Project Name</h2>
-        <p>Description of Project 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </section>
+        <div class="project">
+            <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
+        </div>
+
 
     <!-- Add more sections for other projects as needed -->
 
