--- a/index.html
+++ b/index.html
@@ -55,16 +55,6 @@
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
         }
 
-        footer {
-            background-color: #99b3b3; /* Darker pale teal footer background color */
-            color: #333;
-            padding: 0.5em; /* Smaller footer padding */
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
         /* Style for projects */
         .project {
             margin-bottom: 20px;
@@ -129,7 +119,7 @@
     <nav>
         <!-- Remove the link to the 'About Me' page -->
         <a href="projects.html">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="http://www.cv.com" target="_blank">CV</a>
     </nav>
 
     <section id="about">
@@ -160,10 +150,6 @@
         <p>Email: joe.kendall@gess.ethz.ch</p>
         <p>Twitter: <a href="https://twitter.com/joeakendall">@joeakendall</a></p>
     </section>
-
-    <footer>
-        <p>&copy; 2024 Joe Kendall</p>
-    </footer>
 
 </body>
 
