--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <!-- ... (head content remains the same) ... -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joe Kendall - Projects</title>
+    <style>
+        body {
+            font-family: 'Yu Mincho', serif;
+            margin: 0;
+            padding: 0;
+            background-color: #e6f5f5; /* Lighter teal background color */
+            color: #333; /* Dark gray text color */
+        }
+
+        header {
+            background-image: url('image2.jpg'); /* Background image for the header */
+            background-size: cover;
+            color: #fff; /* White text color */
+            padding: 1em;
+            text-align: center;
+        }
+
+        header h1 {
+            font-weight: bold;
+            margin: 0;
+            font-size: 2em; /* Larger title font size */
+        }
+
+        nav {
+            background-color: #99b3b3; /* Darker pale teal navigation background color */
+            overflow: hidden;
+        }
+
+        nav a {
+            float: left;
+            display: block;
+            color: #333;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            transition: background-color 0.3s; /* Smooth color transition on hover */
+        }
+
+        nav a:hover {
+            background-color: #cce5e5; /* Hover color for navigation links */
+        }
+
+        .project {
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #cce5e5; /* Lighter teal project background color */
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
+        }
+
+        .project a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s; /* Smooth color transition on hover */
+        }
+
+        .project a:hover {
+            color: #e6f5f5; /* Hover color for project links */
+        }
+
+        footer {
+            background-color: #99b3b3; /* Darker pale teal footer background color */
+            color: #333;
+            padding: 0.5em; /* Smaller footer padding */
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
+
 <body>
 
     <header>
@@ -12,25 +87,22 @@
 
     <nav>
         <a href="index.html">Home</a> <!-- Link back to the main page -->
-        <a href="#project1">Project 1</a>
-        <a href="#project2">Project 2</a>
-        <!-- Add links to other projects or sections as needed -->
     </nav>
 
-            <div class="project">
-            <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
-        </div>
+    <div class="project" id="project1">
+        <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
+    </div>
 
-        <div class="project">
-            <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
-        </div>
-
+    <div class="project" id="project2">
+        <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
+    </div>
 
     <!-- Add more sections for other projects as needed -->
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Joe Kendall. All rights reserved.</p>
     </footer>
 
 </body>
+
 </html>
