--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
             background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            opacity: 0.8; /* 20% more transparent */
             color: #fff; /* White text color */
             padding: 1em;
             text-align: center;
@@ -118,8 +121,8 @@
 
     <nav>
         <!-- Remove the link to the 'About Me' page -->
-        <a href="projects.html">Projects</a>
-        <a href="http://www.cv.com" target="_blank">CV</a>
+        <a href="research.html">Research</a>
+        <a href="https://www.dropbox.com/scl/fi/qiu52cslvteojxschbcuw/CV-Kendall.pdf?rlkey=o1lsyn0jb00enc5dvi8doqs2a&dl=0" target="_blank">CV</a>
     </nav>
 
     <section id="about">
@@ -130,16 +133,6 @@
         <img id="profile-image" src="image.jpg" alt="Profile Image">
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-
-        <div class="project">
-            <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
-        </div>
-
-        <div class="project">
-            <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
-        </div>
 
         <!-- Add more projects as needed -->
 
