--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
-            background-size: cover;
+            background-size: 150%; /* Zoom out the background image */
             background-position: center;
             background-attachment: fixed;
             opacity: 0.8; /* 20% more transparent */
@@ -121,7 +121,7 @@
 
     <nav>
         <!-- Remove the link to the 'About Me' page -->
-        <a href="research.html">Research</a>
+        <a href="projects.html">Projects</a>
         <a href="https://www.dropbox.com/scl/fi/qiu52cslvteojxschbcuw/CV-Kendall.pdf?rlkey=o1lsyn0jb00enc5dvi8doqs2a&dl=0" target="_blank">CV</a>
     </nav>
 
