--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
-            background-size: 150%; /* Zoom out the background image */
+            background-size: 250%; /* Zoom out the background image */
             background-position: center;
             background-attachment: fixed;
-            opacity: 0.8; /* 20% more transparent */
+            opacity: 0.6; /* 20% more transparent */
             color: #fff; /* White text color */
             padding: 1em;
             text-align: center;
@@ -121,7 +121,7 @@
 
     <nav>
         <!-- Remove the link to the 'About Me' page -->
-        <a href="projects.html">Projects</a>
+        <a href="research.html">Research</a>
         <a href="https://www.dropbox.com/scl/fi/qiu52cslvteojxschbcuw/CV-Kendall.pdf?rlkey=o1lsyn0jb00enc5dvi8doqs2a&dl=0" target="_blank">CV</a>
     </nav>
 
