--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
-            background-size: 100%; /* Zoom out the background image by 250% */
-            background-position: center;
+            background-size: 90%; /* Zoom out the background image by 250% */
+            background-position: center bottom; /* Align to the bottom of the header */
             background-attachment: fixed;
             opacity: 0.8; /* 20% more transparent */
             color: #fff; /* White text color */
@@ -30,9 +30,6 @@
             margin: 0;
             font-size: 2em; /* Larger title font size */
             color: #fff; /* White text color */
-            display: inline-block;
-            padding: 5px 10px;
-            border: 2px solid #000; /* Black border */
         }
 
         nav {
