--- a/research.html
+++ b/research.html
@@ -16,7 +16,10 @@
 
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
-            background-size: cover;
+            background-size: 100%; /* Zoom out the background image by 250% */
+            background-position: center bottom; /* Align to the bottom of the header */
+            background-attachment: fixed;
+            opacity: 0.8; /* 20% more transparent */
             color: #fff; /* White text color */
             padding: 1em;
             text-align: center;
@@ -90,18 +93,15 @@
     </nav>
 
     <div class="project" id="project1">
-        <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
+        <p><a href="https://www.dropbox.com/s/z0mejllpjx3ewb3/Kendall%20-%20Blood%20Runs%20Thicker%20than%20Water_DropBox.pdf?dl=0">Blood Runs Thicker Than Water: Ancestral Ties to Slavery and Ingroup Defensiveness</a> (under review). <br>
+This survey experiment focuses on how individuals react to information about ancestral involvement in the slave trade, demonstrating how the invocation of familial identity when engaging with ‘uncomfortable’ histories can help to reduce backlash and inter-group prejudice.</p>
     </div>
 
     <div class="project" id="project2">
-        <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
+        <p><a href="https://www.dropbox.com/s/wigljnhzdy6oapj/Kendall%20-%20We%20Could%20Have%20Been%20Worse_DropBox.pdf?dl=0">We Could Have Been Worse: Competitive Innocence and Defensive Memory Among Perpetrator Groups</a> (under review). <br>
+In this survey experiment I test the implications of rhetorical appeals to ‘worse’ cases used by members of perpetrator groups to legitimise their group’s history. I find that such defensive strategies not only enable participants to avoid confronting ‘uncomfortable’ histories but actively increase prejudice towards victimized outgroups.</p>
     </div>
 
-    <!-- Add more sections for other projects as needed -->
-
-    <footer>
-        <p>&copy; 2024 Joe Kendall. All rights reserved.</p>
-    </footer>
 
 </body>
 
