--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
             background-size: 100%; /* Zoom out the background image by 250% */
-            background-position: center bottom; /* Align to the bottom of the header */
+            background-position: center; /* Align to the bottom of the header */
             background-attachment: fixed;
             opacity: 0.8; /* 20% more transparent */
             color: #fff; /* White text color */
