--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             background-color: #cce5e5; /* Lighter teal section background color */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
+            max-width: 800px; /* Set max-width for the content */
+            margin-left: auto;
+            margin-right: auto;
         }
 
         /* Style for projects */
