--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
             padding: 0;
             background-color: #e6f5f5; /* Lighter teal background color */
             color: #333; /* Dark gray text color */
+            max-width: 1200px; /* Set max-width for the content */
+            margin-left: auto;
+            margin-right: auto;
         }
 
         header {
             background-image: url('image2.jpg'); /* Background image for the header */
-            background-size: 100%; /* Zoom out the background image by 250% */
-            background-position: center ; /* Align to the bottom of the header */
+            background-size: cover; /* Cover the entire header */
+            background-position: center; /* Center the background image */
             background-attachment: fixed;
             opacity: 0.8; /* 20% more transparent */
             color: #fff; /* White text color */
@@ -53,7 +56,7 @@
 
         section {
             padding: 20px;
-            margin: 20px;
+            margin: 20px auto; /* Center the section */
             background-color: #cce5e5; /* Lighter teal section background color */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Light shadow effect */
